[project]
name = "exception-handling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.4.0",
]

[build-system]
requires = ["hatchling"]

build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/exception_handling"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
tool = [
    "mock>=5.2.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]
